--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "checkout-widget",
+  "name": "advanced-react-patterns",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Advanced ReactJS Patterns",
+  "main": "server.js",
   "scripts": {
-    "start": "babel-node server.js"
+    "start": "./node_modules/.bin/babel-node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leanjsventures/checkout-widget.git"
+    "url": "git+https://github.com/reactjs-academy/advanced-react-patterns.git"
   },
-  "author": "LeanJS",
+  "author": "ReactJS Academy",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/leanjsventures/checkout-widget/issues"
+    "url": "https://github.com/reactjs-academy/advanced-react-patterns/issues"
   },
-  "homepage": "https://github.com/leanjsventures/checkout-widget#readme",
+  "homepage": "https://github.com/reactjs-academy/advanced-react-patterns#readme",
   "dependencies": {
     "material-ui": "^0.16.6",
     "react": "^15.4.1",
@@ -29,55 +29,16 @@
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-istanbul": "^0.11.0",
     "babel-loader": "^6.2.8",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-typecheck": "^3.9.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "chai-things": "^0.2.0",
-    "chromedriver": "^2.25.3",
-    "cross-env": "^3.1.2",
     "css-loader": "^0.26.1",
-    "depcheck": "^0.6.6",
-    "eslint": "^3.11.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-config-airbnb-flow": "^1.0.2",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-flowtype": "^2.29.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.7.1",
-    "eslint-plugin-standard": "^2.0.1",
     "express": "^4.14.0",
-    "flow-bin": "^0.36.0",
     "ignore-styles": "^5.0.1",
-    "inquirer": "^2.0.0",
-    "isparta": "^4.0.0",
-    "istanbul": "^1.1.0-alpha.1",
-    "istanbul-instrumenter-loader": "^1.1.0",
-    "jsdom": "^9.8.3",
-    "mocha": "^3.2.0",
-    "nightwatch": "^0.9.9",
-    "nyc": "^10.0.0",
-    "pre-push": "^0.1.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-tap-event-plugin": "^1.0.0",
-    "redux-logger": "^2.6.1",
-    "remap-istanbul": "^0.7.0",
-    "rimraf": "^2.5.4",
-    "scripty": "^1.7.1",
-    "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0",
-    "sinon-stub-promise": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.4",
