--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-container-component": "^1.0.3",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.0"
   },
   "devDependencies": {
