--- a/package.json
+++ b/package.json
@@ -1,50 +1,21 @@
 {
-  "name": "advanced-react-patterns",
-  "version": "1.0.0",
-  "description": "Advanced ReactJS Patterns",
-  "main": "server.js",
-  "scripts": {
-    "start": "./node_modules/.bin/babel-node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/reactjs-academy/advanced-react-patterns.git"
-  },
-  "author": "ReactJS Academy",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/reactjs-academy/advanced-react-patterns/issues"
-  },
-  "homepage": "https://github.com/reactjs-academy/advanced-react-patterns#readme",
+  "name": "advanced-react-patterns-new",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "jsonp": "^0.2.1",
-    "material-ui": "^0.16.6",
-    "react": "^15.4.1",
-    "react-bootstrap": "^0.30.7",
-    "react-burger-menu": "^1.10.10",
-    "react-container-component": "^1.0.3",
-    "react-dom": "^15.4.1",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-router-dom": "^4.0.0",
-    "react-tap-event-plugin": "^2.0.0"
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
+    "react-burger-menu": "^2.5.2",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4"
   },
-  "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.0.20",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
-    "babel-register": "^6.18.0",
-    "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "ignore-styles": "^5.0.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.0",
-    "webpack-validator": "^2.3.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
