--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
