--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.2",
+    "styled-system": "^3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
