--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "final-form": "^4.11.0",
     "jsonp": "^0.2.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
+    "react-final-form": "^4.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.1"
