--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-final-form": "^4.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
